# fika-prep

./: .gitignore  Makefile  README.md  pyproject.toml
sql/: 00_extensions_and_types.sql  01_tables_pois.sql  02_tables_admin_areas.sql  04_tables_itineraries.sql  05_tables_users.sql  20_link_admin_areas.sql  31_function_poi_candidates.sql  32_function_search_locations.sql  33_function_search_pois.sql  34_function_itinerary.sql
src/: category_to_theme.py  clean.ipynb  clean.py  convert_ipynb.py  dedup.py  dedup_stage_one.py  dedup_stage_two.py  gemini.py  google.ipynb  load_pois.py  load_polygon.py  load_roles.py  load_themes.py  michelin.py  osm_polygon.py  run_sql.py  test_gemini.py  text.py  upload_pois_to_supabase.py
