[project]
name = "fika-prep"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "ipykernel>=7.1.0",
    "notebook>=7.4.7",
    "supabase>=2.22.0",
    "python-dotenv>=1.1.1",
    "cloudinary>=1.44.1",
    "tqdm>=4.67.1",
    "aiohttp>=3.13.2",
    "google-genai>=1.47.0",
    "osmnx",
    "geopandas",
    "psycopg2-binary",
    "sqlalchemy",
    "geoalchemy2",
]
